Modified trigger button of system rules

--- a/popup.html
+++ b/popup.html
@@ -49,6 +49,8 @@
                 <input type="color" id="st-srules-background" value="#387CE8">
                 <p>Text color</p>
                 <input type="color" id="st-srules-text" value="#ffffff">
+                <p>Manual trigger</p>
+                <button class="st-srules-trigger" id="st-srules-trigger">Trigger</button>
             </div>
         </div>
     </section>
